--- a/pages/AddCart.html
+++ b/pages/AddCart.html
@@ -8,7 +8,7 @@
     integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 
     <link rel="stylesheet" href="../styles/navbar.css">
-    <link rel="stylesheet" href="../styles/AddCart.css">
+    <link rel="stylesheet" href="../styles/AddCart2.css">
 <link rel="stylesheet" href="../styles/footer.css">
 
 <title> Cart's | Theory</title>
@@ -169,5 +169,5 @@
 
 </script>
 
-<script src="../scripts/Addcart.js"></script>
+<script src="../scripts/Addcart2.js"></script>
 <script src="../scripts/header.js"></script>
